Updated assets/images, index.html, styles.css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar">
         <a href="#" class="logo">
-            <span class="get">get<span class="linked">linked</span></span>  
+            <span class="get">get<span class="linked pink">linked</span></span>  
         </a>
         <div class="nav-links-container">
             <div class="nav-links">
@@ -47,7 +47,37 @@
         </div>
         
     </nav>
-    <main class="container"></main>
+    <main class="container">
+        <section class="header">
+            <div class="top-text-and-stroke">
+                <p class="top-text"><em>Igniting a Revolution in HR Innovation</em></p>
+                <img src="./assets/images/pink_stroke.svg" alt="pink stroke" class="stroke">
+            </div>
+            <div class="side-texts-btn-icons">
+                <h1 class="side-head">getlinked Tech Hackathon<span class="pink">1.0</span></h1>
+                <p class="side-text">Participate in getlinked tech Hackathon 2023 stand 
+                    a chance to win a Big prize</p>
+                <button class="side-btn">Register</button>
+                <div class="timers">
+                    <div class="hour">00<span class="small-text">H</span></div>
+                    <div class="minute">00<span class="small-text">M</span></div>
+                    <div class="second">00<span class="small-text">S</span></div>
+                </div>
+                <img src="./assets/images/chain.svg" alt="chain" id="chain">
+                <img src="./assets/images/blast.svg" alt="blast" id="blast">
+                <img src="./assets/images/bulb.svg" alt="light bulb" id="bulb">
+                <img src="./assets/images/gray_star.svg" alt="gray star" class="gray-star">
+                <img src="./assets/images/gray_star.svg" alt="gray star" class="gray-star">
+                <img src="./assets/images/white_star.svg" alt="white star" id="white-star">
+            </div>
+            <div class="images">
+                <img src="./assets/images/bubbles.png" alt="blue bubble-like circles" id="bubbles">
+                <!--<img src="./assets/images/man-wearing-smart-glasses-touching-virtual-screen 2.png" alt="man wearing smrt glasses" id="smart-glasses">-->
+                
+            </div>
+        </section>
+        <section>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet illo reprehenderit quis, modi quod optio autem minima praesentium? Amet veniam quod asperiores minima velit temporibus sit dolore voluptatibus tempora beatae?</section>
+    </main>
     <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
