Changed the Montserrat file, modified index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
         </div>
         
     </nav>
-    <main class="container">
-        <section class="header">
-            <div class="top-text-and-stroke">
-                <p class="top-text"><em>Igniting a Revolution in HR Innovation</em></p>
-                <img src="./assets/images/pink_stroke.svg" alt="pink stroke" class="stroke">
-            </div>
-            <div class="side-texts-btn-icons">
-                <h1 class="side-head">getlinked Tech Hackathon<span class="pink">1.0</span></h1>
+    <header class="header">
+        <div class="top-text-and-stroke">
+            <p class="top-text">Igniting a Revolution in HR Innovation</p>
+            <img src="./assets/images/pink_stroke.svg" alt="pink stroke" class="stroke">
+        </div>
+        <div class="bottom-text-and-images">
+            <div class="side-texts-btn-icons bord">
+                <h class="side-head bord">getlinked Tech Hackathon<span class="pink">1.0</span></h>
                 <p class="side-text">Participate in getlinked tech Hackathon 2023 stand 
                     a chance to win a Big prize</p>
                 <button class="side-btn">Register</button>
@@ -72,10 +72,12 @@
             </div>
             <div class="images">
                 <img src="./assets/images/bubbles.png" alt="blue bubble-like circles" id="bubbles">
-                <!--<img src="./assets/images/man-wearing-smart-glasses-touching-virtual-screen 2.png" alt="man wearing smrt glasses" id="smart-glasses">-->
+                <img src="./assets/images/man-wearing-smart-glasses-touching-virtual-screen 2.png" alt="man wearing smrt glasses" id="smart-glasses">
                 
             </div>
-        </section>
+        </div>
+    </header>
+    <main class="container">
         <section>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet illo reprehenderit quis, modi quod optio autem minima praesentium? Amet veniam quod asperiores minima velit temporibus sit dolore voluptatibus tempora beatae?</section>
     </main>
     <script type="text/javascript" src="index.js"></script>
