Updated index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -48,13 +48,25 @@
         
     </nav>
     <header class="header">
-        <div class="top-text-and-stroke">
-            <p class="top-text">Igniting a Revolution in HR Innovation</p>
-            <img src="./assets/images/pink_stroke.svg" alt="pink stroke" class="stroke">
+        <div class="top-right-text">
+            <div class="top-text-and-stroke">
+                <p class="top-text">Igniting a Revolution in HR Innovation</p>
+                <img src="./assets/images/pink_stroke.svg" alt="pink stroke" class="stroke">
+            </div>
         </div>
-        <div class="bottom-text-and-images">
-            <div class="side-texts-btn-icons bord">
-                <h class="side-head bord">getlinked Tech Hackathon<span class="pink">1.0</span></h>
+        <div class="left-texts-and-icons">
+            <div class="left-texts-btn-icons bord2">
+                <div class="left-side-up bord ">
+                    <h1 class="left-side-up-head">
+                        getlinked Tech Hackathon
+                        <span class="pink one">1.0</span>
+                    </h1>
+                  
+                    <div class="left-side-up-icons">
+                        <img src="./assets/images/chain.svg" alt="chain" id="chain" >
+                        <img src="./assets/images/blast.svg" alt="blast" id="blast">
+                    </div>
+                </div>
                 <p class="side-text">Participate in getlinked tech Hackathon 2023 stand 
                     a chance to win a Big prize</p>
                 <button class="side-btn">Register</button>
@@ -63,12 +75,13 @@
                     <div class="minute">00<span class="small-text">M</span></div>
                     <div class="second">00<span class="small-text">S</span></div>
                 </div>
-                <img src="./assets/images/chain.svg" alt="chain" id="chain">
-                <img src="./assets/images/blast.svg" alt="blast" id="blast">
-                <img src="./assets/images/bulb.svg" alt="light bulb" id="bulb">
-                <img src="./assets/images/gray_star.svg" alt="gray star" class="gray-star">
-                <img src="./assets/images/gray_star.svg" alt="gray star" class="gray-star">
-                <img src="./assets/images/white_star.svg" alt="white star" id="white-star">
+                <div class="icons">
+                    <img src="./assets/images/bulb.svg" alt="light bulb" id="bulb">
+                    <img src="./assets/images/gray_star.svg" alt="gray star" class="gray-star-header-up">
+                    <img src="./assets/images/gray_star.svg" alt="gray star" class="gray-star-header-down">
+                    <img src="./assets/images/white_star.svg" alt="white star" id="white-star-header">
+                    <!--<img src="./assets/images/Purple-Lens-Flare-PNG.png" alt="an image of a purple flare" id="purple-flare">-->
+                </div>
             </div>
             <div class="images">
                 <img src="./assets/images/bubbles.png" alt="blue bubble-like circles" id="bubbles">
